# BinScope

./: README.md  pyproject.toml  requirements.txt
binscope/: __init__.py  __main__.py
binscope/cli/: __init__.py  main.py
binscope/core/: __init__.py  __main__.py  elf_parser.py  models.py  pe_parser.py  utils.py
binscope/gui/: main.py
win/: mydll.c  mydll.txt
