[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binscope"
version = "0.1.0"
description = "Cross-platform ELF/PE parser with CLI and PyQt GUI"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pyelftools>=0.31",
    "pefile>=2023.2.7",
    "PyQt5>=5.15.9",
]

[project.optional-dependencies]
extra = ["capstone>=5.0.0"]

[project.scripts]
binscope = "binscope.cli:main"
binscope-gui = "binscope.gui:main"

[tool.setuptools.packages.find]
where = ["."]
